Remove references to `maven-bundle-plugin`